Wednesday, 14th December, Al Riddoch

	* src/Dispatcher.cpp: Take reference to StdBranchDispatcher before
	  calling its subdispatchers so it doesn't get deleted before its
	  finished. Fix use of iterators.

	* src/Dispatcher.h, src/Connection.cpp: Make reference handling
	  methods public, and make connection hold a reference to the
	  root dispatcher so it doesn't get deleted.

Wednesday, 12th December, Al Riddoch

	* src/Avatar.cpp: Fix initialisation of val.

Wednesday, 11th December, Al Riddoch

	* test/testPlayer.cpp: std:: namespace fixes.

	* configure.in: Handle interface version correctly.

Monday, 2nd December, Ron Steinke

	* Fixed check for Perl bindings so it can detect SigCPerl >= 0.2.0,
	  which uses pkg-config
	* Fixed errors in Perl binding build, made some changes necessary
	  to accomodate libsigc++-1.2

Friday, 29th November, Ron Steinke

	* Added PollGlib, with code taken from silence. This is the poll
	  for use with gtk+, it's called PollGlib because it only depends
	  on the lower level glib library.

Tuesday, 27th November, Ron Steinke

	* Integrated Perl bindings into the build with --enable-perl.
	  Rebuild dependencies still don't work properly, and make dist
	  isn't integrated between the automake and makemaker parts.

Tuesday, 26th November, Ron Steinke

	* Added a missing forward declaration of World to Factory.h

Monday, 18th November, Ron Steinke

	* Changed a bunch of accessors that returned std::string
	  to return const std::string& instead

Thursday, 14th November, Ron Steinke

	* Changed the second argument of Meta::ReceivedServerInfo
	  from ServerInfo to const ServerInfo&, fixed a typo

Tuesday, 12th November, Ron Steinke

	* Added an optional offset to Avatar::drop().
	* Split Avatar::InvChanged into Avatar::InvAdded
	  and Avatar::InvRemoved.

Wednesday, 6th November, Ron Steinke

	* Added a signal handler to set Avatar's _entity member
	* Added some inventory handling capabilities to Avatar
